[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Debug.gd" type="Script" id=1]

[node name="Debug" type="Control"]
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 720 )
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1273.0
margin_bottom = 713.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Layout" type="GridContainer" parent="PanelContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1246.0
margin_bottom = 686.0
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 5

[node name="Level1" type="Button" parent="PanelContainer/MarginContainer/Layout"]
margin_right = 200.0
margin_bottom = 120.0
rect_min_size = Vector2( 200, 120 )
text = "Level1"

[node name="Level2" type="Button" parent="PanelContainer/MarginContainer/Layout"]
margin_left = 220.0
margin_right = 420.0
margin_bottom = 120.0
rect_min_size = Vector2( 200, 120 )
text = "Level2"

[node name="Level3" type="Button" parent="PanelContainer/MarginContainer/Layout"]
margin_left = 440.0
margin_right = 640.0
margin_bottom = 120.0
rect_min_size = Vector2( 200, 120 )
text = "Level3"

[node name="Level4" type="Button" parent="PanelContainer/MarginContainer/Layout"]
margin_left = 660.0
margin_right = 860.0
margin_bottom = 120.0
rect_min_size = Vector2( 200, 120 )
text = "Level4"

[node name="Level5" type="Button" parent="PanelContainer/MarginContainer/Layout"]
margin_left = 880.0
margin_right = 1080.0
margin_bottom = 120.0
rect_min_size = Vector2( 200, 120 )
text = "Level5"

[node name="Level6" type="Button" parent="PanelContainer/MarginContainer/Layout"]
margin_top = 140.0
margin_right = 200.0
margin_bottom = 260.0
rect_min_size = Vector2( 200, 120 )
text = "Level6"

[node name="Level7" type="Button" parent="PanelContainer/MarginContainer/Layout"]
margin_left = 220.0
margin_top = 140.0
margin_right = 420.0
margin_bottom = 260.0
rect_min_size = Vector2( 200, 120 )
text = "Level7"

[node name="Level8" type="Button" parent="PanelContainer/MarginContainer/Layout"]
margin_left = 440.0
margin_top = 140.0
margin_right = 640.0
margin_bottom = 260.0
rect_min_size = Vector2( 200, 120 )
text = "Level8"

[node name="Level9" type="Button" parent="PanelContainer/MarginContainer/Layout"]
margin_left = 660.0
margin_top = 140.0
margin_right = 860.0
margin_bottom = 260.0
rect_min_size = Vector2( 200, 120 )
text = "Level9"

[node name="Level10" type="Button" parent="PanelContainer/MarginContainer/Layout"]
margin_left = 880.0
margin_top = 140.0
margin_right = 1080.0
margin_bottom = 260.0
rect_min_size = Vector2( 200, 120 )
text = "Level10"

[connection signal="pressed" from="PanelContainer/MarginContainer/Layout/Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Layout/Level2" to="." method="_on_Level2_pressed"]
